--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9781/9764/9781976468049.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
  
     <title>Friends Quotes</title>
