--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9781/9764/9781976468049.jpg" />
+    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
- 
+
     <title>Friends Quotes</title>
   </head>
   <body>
